# CodingPlatformNetwork

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  generate_sample_data.py  mock_data.cypher  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  start.sh  tailwind.config.ts  verify-setup.js
backend/: .env.example  README.md  add_mock_data.py  add_mock_relationships.py  celery_worker.py  check_data.py  check_database.py  check_relationships.py  demo_cache.py  demo_data_import.py  demo_llm_application.py  demo_multi_course_error.py  demo_report_service.py  generate_test_data.py  pyproject.toml  report.json  start_celery_worker.sh  start_flower.sh  test_celery_integration.py  test_query_debug.py  test_setup.py  verify_task_15.py  verify_task_9.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  main.py
backend/docs/: ARCHITECTURE.md  CACHE_IMPLEMENTATION_SUMMARY.md  CACHE_QUICK_START.md  CELERY_IMPLEMENTATION_SUMMARY.md  CELERY_QUICK_START.md  CELERY_USAGE.md  ERROR_HANDLING.md  IMPLEMENTATION_SUMMARY.md  INCREMENTAL_UPDATE_AND_TRANSACTIONS.md  LLM_SERVICE_USAGE.md  LLM_SETUP.md  MULTI_COURSE_ERROR_HANDLING.md  NEO4J_INTEGRATION_SUMMARY.md  QUICK_START_MULTI_COURSE_ERROR.md  REDIS_CACHE_IMPLEMENTATION.md  REPORT_SERVICE_API.md  REPORT_SERVICE_IMPLEMENTATION.md  SUBVIEW_IMPLEMENTATION_SUMMARY.md  TASK_15_IMPLEMENTATION_SUMMARY.md  TASK_18_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md
backend/scripts/: add_class_to_students.py  add_sample_classes.py  add_uuid_to_nodes.py  backup_neo4j.py  (+8 more)
(+136 files in other folders)
